# 6502

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  cpu.c  cpu.h  disassembly_to_array.py  int.c  int.h  justfile  main.c  mem.c  mem.h  prgs.h
samples/: .gitignore  indirect_indexed.hex  indirect_indexed.s  snake.hex  snake.s  stack.s
src/: addressing.c  addressing.h  cpu.c  cpu.h  gui.c  gui.h  instructions.c  instructions.h  int.c  main.c  mem.c  mem.h  prgs.h  rom.c  rom.h
